--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
             // Initialize the flipbook
             flipbook.turn({
-                width: 800, // Adjust this to your desired width
-                height: 400, // Adjust this to your desired height
+                width: 800, // Adjust to your desired width
+                height: 400, // Adjust to your desired height
                 autoCenter: true,
                 display: 'double',
             });
