--- a/index.html
+++ b/index.html
@@ -15,30 +15,32 @@
     <link rel="stylesheet" href="flipbook.css">
 </head>
 <body>
-    <div id="flipbook">
-        <!-- First spread (cover) -->
-        <div class="page cover">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
-        </div>
+    <div id="flipbook-container">
+        <div id="flipbook">
+            <!-- First spread (cover) -->
+            <div class="page cover">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
+            </div>
 
-        <!-- Remaining spreads -->
-        <div class="page spread">
-            <div class="left-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
+            <!-- Remaining spreads -->
+            <div class="page spread">
+                <div class="left-half">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
+                </div>
+                <div class="right-half">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
+                </div>
             </div>
-            <div class="right-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
+            <div class="page spread">
+                <div class="left-half">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
+                </div>
+                <div class="right-half">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
+                </div>
             </div>
+            <!-- Add more pages as needed -->
         </div>
-        <div class="page spread">
-            <div class="left-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
-            </div>
-            <div class="right-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
-            </div>
-        </div>
-        <!-- Add more pages as needed -->
     </div>
 
     <script type="text/javascript">
