--- a/index.html
+++ b/index.html
@@ -3,72 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipbook Example</title>
-    
-    <!-- jQuery Library -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-    <!-- turn.js Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
-
-    <!-- Link to your CSS file -->
     <link rel="stylesheet" href="flipbook.css">
+    <title>Flipbook</title>
 </head>
 <body>
-    <div id="flipbook-container">
-        <div id="flipbook">
-            <!-- First spread (cover) -->
-            <div class="page cover">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
-            </div>
-
-            <!-- Remaining spreads -->
-            <div class="page spread">
-                <div class="left-half">
-                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
-                </div>
-                <div class="right-half">
-                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
-                </div>
-            </div>
-            <div class="page spread">
-                <div class="left-half">
-                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
-                </div>
-                <div class="right-half">
-                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
-                </div>
-            </div>
-            <!-- Add more pages as needed -->
+    <div id="flipbook" class="flipbook">
+        <div class="page cover">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
+        <div class="page">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2">
+        </div>
+        <div class="page">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3">
+        </div>
+        <!-- Add more pages as needed -->
     </div>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            var flipbook = $("#flipbook");
-
-            // Initialize the flipbook
-            flipbook.turn({
-                width: 800, // Adjust to your desired width
-                height: 400, // Adjust to your desired height
-                autoCenter: true,
-                display: 'double',
-            });
-
-            // Event listeners for flipping pages on click
-            flipbook.on('click', '.page', function() {
-                flipbook.turn('next');
-            });
-
-            // Event listeners for flipping pages with arrow keys
-            $(document).keydown(function(e) {
-                if (e.key === "ArrowRight") {
-                    flipbook.turn('next');
-                } else if (e.key === "ArrowLeft") {
-                    flipbook.turn('previous');
-                }
-            });
-        });
-    </script>
+    <script src="turn.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
