--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flipbook.css">
     <title>Flipbook</title>
-    <!-- Add jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div id="flipbook" class="flipbook">
+        <!-- Cover page: full page display -->
         <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
+
+        <!-- Spread: left half (Page 2) -->
         <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half of Spread">
         </div>
+        <!-- Spread: right half (Page 3) -->
         <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Right Half of Spread">
         </div>
-        <!-- Add more pages as needed -->
+
+        <!-- Add more left-right page pairs here -->
     </div>
 
     <script src="turn.js"></script>
