--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
-        <!-- Spread: left half (Page 2) -->
+        <!-- Spread: Full two-page spread (Image contains both left and right halves) -->
         <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half of Spread">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Two Page Spread 1">
         </div>
-        <!-- Spread: right half (Page 3) -->
         <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Right Half of Spread">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Two Page Spread 2">
         </div>
 
-        <!-- Add more left-right page pairs here -->
+        <!-- Add more full spread images as needed -->
     </div>
 
     <script src="turn.js"></script>
