--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
-        <!-- Spread: Full two-page spread (Image contains both left and right halves) -->
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Two Page Spread 1">
+        <!-- Spread: Full two-page spread (Image spans across two pages) -->
+        <div class="page" style="background-color: #fff;">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Two Page Spread 1" class="spread">
         </div>
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Two Page Spread 2">
+        <div class="page" style="background-color: #fff;">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Two Page Spread 2" class="spread">
         </div>
 
         <!-- Add more full spread images as needed -->
