--- a/index.html
+++ b/index.html
@@ -9,20 +9,15 @@
 </head>
 <body>
     <div id="flipbook" class="flipbook">
-        <!-- Cover page: full page display -->
+        <!-- First page (cover) -->
         <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
-        <!-- Spread: Full two-page spread (Image spans across two pages) -->
-        <div class="page" style="background-color: #fff;">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Two Page Spread 1" class="spread">
+        <!-- Second page (spread) -->
+        <div class="page spread">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Spread">
         </div>
-        <div class="page" style="background-color: #fff;">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Two Page Spread 2" class="spread">
-        </div>
-
-        <!-- Add more full spread images as needed -->
     </div>
 
     <script src="turn.js"></script>
