--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
 </head>
 <body>
     <div id="flipbook" class="flipbook">
-        <!-- First page (cover) -->
+        <!-- Cover page: full page display -->
         <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
-        <!-- Second page (spread) -->
-        <div class="page spread">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Spread">
+        <!-- Two-page spread: Split across left and right pages -->
+        <div class="page spread-left">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half" class="split-left">
+        </div>
+        <div class="page spread-right">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Right Half" class="split-right">
+        </div>
+
+        <!-- Repeat for additional spreads -->
+        <div class="page spread-left">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Left Half" class="split-left">
+        </div>
+        <div class="page spread-right">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Right Half" class="split-right">
         </div>
     </div>
 
