--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         </div>
 
         <!-- Spread 1: Left half and right half split between two pages -->
-        <div class="page">
+        <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half" class="split-left">
         </div>
-        <div class="page">
+        <div class="page spread-right">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Right Half" class="split-right">
         </div>
 
         <!-- Spread 2: Left half and right half split between two pages -->
-        <div class="page">
+        <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Left Half" class="split-left">
         </div>
-        <div class="page">
+        <div class="page spread-right">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Right Half" class="split-right">
         </div>
     </div>
