--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     <div id="flipbook" class="flipbook">
         <!-- Title page: Full page display -->
-        <div class="page cover" data-page-type="single">
+        <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
         <!-- Spread 1: Left half and right half split between two pages -->
-        <div class="page spread-left" data-page-type="spread">
+        <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half" class="split-left">
         </div>
-        <div class="page spread-right" data-page-type="spread">
+        <div class="page spread-right">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Right Half" class="split-right">
         </div>
 
         <!-- Spread 2: Left half and right half split between two pages -->
-        <div class="page spread-left" data-page-type="spread">
+        <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Left Half" class="split-left">
         </div>
-        <div class="page spread-right" data-page-type="spread">
+        <div class="page spread-right">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Right Half" class="split-right">
         </div>
     </div>
@@ -34,5 +34,4 @@
     <script src="turn.js"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
