--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="flipbook" class="flipbook">
-        <!-- Title page: Full page display -->
+        <!-- Cover page: single centered square -->
         <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
 
-        <!-- Spread 1: Left half and right half split between two pages -->
+        <!-- Spread 1: Left and right pages -->
         <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left Half" class="split-left">
         </div>
@@ -22,7 +22,7 @@
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Right Half" class="split-right">
         </div>
 
-        <!-- Spread 2: Left half and right half split between two pages -->
+        <!-- Additional spreads as needed -->
         <div class="page spread-left">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Left Half" class="split-left">
         </div>
