--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,25 +13,17 @@
     <div class="container">
         <div id="flipbook">
             <!-- Cover page -->
-            <div class="hard">
+            <div class="hard cover">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
             </div>
-            <!-- Blank back of cover -->
-            <div class="hard"></div>
             
             <!-- Pages 2-3 spread -->
-            <div class="page-spread left">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3" class="spread-img">
-            </div>
-            <div class="page-spread right">
+            <div class="double-page">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3" class="spread-img">
             </div>
             
             <!-- Pages 4-5 spread -->
-            <div class="page-spread left">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5" class="spread-img">
-            </div>
-            <div class="page-spread right">
+            <div class="double-page">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5" class="spread-img">
             </div>
         </div>
