--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!-- index.html -->
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,13 +18,27 @@
             </div>
             
             <!-- Pages 2-3 spread -->
-            <div class="double-page">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3" class="spread-img">
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3">
+                </div>
             </div>
             
             <!-- Pages 4-5 spread -->
-            <div class="double-page">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5" class="spread-img">
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5">
+                </div>
             </div>
         </div>
     </div>
