--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
             </div>
             
-            <!-- Pages 2-3 spread -->
+            <!-- Pages 2-3 to 34-35 spreads -->
             <div class="spread-left">
                 <div class="spread-wrapper">
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3">
@@ -35,8 +34,7 @@
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Pages 2-3">
                 </div>
             </div>
-            
-            <!-- Pages 4-5 spread -->
+
             <div class="spread-left">
                 <div class="spread-wrapper">
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5">
@@ -47,8 +45,170 @@
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Pages 4-5">
                 </div>
             </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover4.jpg" alt="Pages 6-7">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover4.jpg" alt="Pages 6-7">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover5.jpg" alt="Pages 8-9">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover5.jpg" alt="Pages 8-9">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover6.jpg" alt="Pages 10-11">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover6.jpg" alt="Pages 10-11">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover7.jpg" alt="Pages 12-13">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover7.jpg" alt="Pages 12-13">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover8.jpg" alt="Pages 14-15">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover8.jpg" alt="Pages 14-15">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover9.jpg" alt="Pages 16-17">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover9.jpg" alt="Pages 16-17">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover10.jpg" alt="Pages 18-19">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover10.jpg" alt="Pages 18-19">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover11.jpg" alt="Pages 20-21">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover11.jpg" alt="Pages 20-21">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover12.jpg" alt="Pages 22-23">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover12.jpg" alt="Pages 22-23">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover13.jpg" alt="Pages 24-25">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover13.jpg" alt="Pages 24-25">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover14.jpg" alt="Pages 26-27">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover14.jpg" alt="Pages 26-27">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover15.jpg" alt="Pages 28-29">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover15.jpg" alt="Pages 28-29">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover16.jpg" alt="Pages 30-31">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover16.jpg" alt="Pages 30-31">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover17.jpg" alt="Pages 32-33">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover17.jpg" alt="Pages 32-33">
+                </div>
+            </div>
+
+            <div class="spread-left">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover18.jpg" alt="Pages 34-35">
+                </div>
+            </div>
+            <div class="spread-right">
+                <div class="spread-wrapper">
+                    <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover18.jpg" alt="Pages 34-35">
+                </div>
+            </div>
+
+            <!--
