--- a/index.html
+++ b/index.html
@@ -210,5 +210,8 @@
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover18.jpg" alt="Pages 34-35">
                 </div>
             </div>
-
-            <!--
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
