--- a/index.html
+++ b/index.html
@@ -209,6 +209,206 @@
                 <div class="spread-wrapper">
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover18.jpg" alt="Pages 34-35">
                 </div>
+
+            <div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover19.jpg" alt="Pages 36-37">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover19.jpg" alt="Pages 36-37">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover20.jpg" alt="Pages 38-39">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover20.jpg" alt="Pages 38-39">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover21.jpg" alt="Pages 40-41">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover21.jpg" alt="Pages 40-41">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover22.jpg" alt="Pages 42-43">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover22.jpg" alt="Pages 42-43">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover23.jpg" alt="Pages 44-45">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover23.jpg" alt="Pages 44-45">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover24.jpg" alt="Pages 46-47">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover24.jpg" alt="Pages 46-47">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover25.jpg" alt="Pages 48-49">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover25.jpg" alt="Pages 48-49">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover26.jpg" alt="Pages 50-51">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover26.jpg" alt="Pages 50-51">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover27.jpg" alt="Pages 52-53">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover27.jpg" alt="Pages 52-53">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover28.jpg" alt="Pages 54-55">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover28.jpg" alt="Pages 54-55">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover29.jpg" alt="Pages 56-57">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover29.jpg" alt="Pages 56-57">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover30.jpg" alt="Pages 58-59">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover30.jpg" alt="Pages 58-59">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover31.jpg" alt="Pages 60-61">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover31.jpg" alt="Pages 60-61">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover32.jpg" alt="Pages 62-63">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover32.jpg" alt="Pages 62-63">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover33.jpg" alt="Pages 64-65">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover33.jpg" alt="Pages 64-65">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover34.jpg" alt="Pages 66-67">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover34.jpg" alt="Pages 66-67">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover35.jpg" alt="Pages 68-69">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover35.jpg" alt="Pages 68-69">
+    </div>
+</div>
+
+<div class="spread-left">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover36.jpg" alt="Pages 70-71">
+    </div>
+</div>
+<div class="spread-right">
+    <div class="spread-wrapper">
+        <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover36.jpg" alt="Pages 70-71">
+    </div>
+</div>
+
+                
             </div>
         </div>
     </div>
