--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
                 <div class="spread-wrapper">
                     <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover36.jpg" alt="Pages 70-71">
                 </div>
+                <div class="overlay-text">
+        This is a book of art and ideas. There is only one printed copy in the world, which is available for loan if you live in the Denver area, but you can enjoy this digital version if you don't. If you read this, please send your thoughts to <a href="mailto:mhasting1066@gmail.com">mhasting1066@gmail.com</a>. Send at least one thought.
+                </div>
             </div>
         </div>
     </div>
